fix minor spacing bug

--- a/frontend/src/components/Projects/ProjectCard/_projectCard.scss
+++ b/frontend/src/components/Projects/ProjectCard/_projectCard.scss
@@ -108,7 +108,9 @@
   }
 
   &--image {
-
+    @include respond(tab-land) {
+      min-height: 27rem;
+    }
     background: rgba(grey, .2);
     min-height: 25rem;
   }
