--- a/frontend/src/styles/abstracts/_mixins.scss
+++ b/frontend/src/styles/abstracts/_mixins.scss
@@ -35,7 +35,7 @@ $breakpoint argument choices:
 		@media only screen and (min-width: 56.25em) { @content };			// minWidth 900px
 	}
 	@if $breakpoint == md-desk {
-		@media only screen and (max-width: 112.5em) { @content };			// maxWidth 1800px
+		@media only screen and (min-width: 75em) { @content };			// minWidth 1200px
 	}
 	@if $breakpoint == big-desktop {
 		@media only screen and (min-width: 112.5em) { @content };			// minWidth 1800px
